[배지현] - discount 변수 생성

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -14,7 +14,7 @@
 				
 			<div class="d-flex align-items-center ">
 					<div class="logo p-3 mr-4"><!-- 로고  추후 수정-->
-					누누북스
+						<a href="/nunubooks/main" class="logo">누누북스</a>
 					</div>
 					<!--  검색버튼 -->
 				<form action="/nunubooks/searchList" method="get">
