--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -49,8 +49,15 @@ color: #7CC491;
 -webkit-text-stroke-width: 3px;
 -webkit-text-stroke-color: #1F7B3B;
 
+
 	
 }
+
+.logo > a {
+  text-decoration: none;
+  color: inherit;
+}
+
 
 .logo-color{
 color: #7CC491;
