--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -76,7 +76,7 @@
 					,data:{"loginId":loginId,"password":password}
 					,success:function(response){
 						if(response.result == "success"){
-							location.href="/nunubooks/account/main";
+							location.href="/nunubooks/main";
 						} else {
 							alert("아이디 혹은 비밀번호를 다시 확인해주세요")
 						}
