--- a/src/main/resources/templates/books/searchList.html
+++ b/src/main/resources/templates/books/searchList.html
@@ -25,11 +25,11 @@
 			 
 			<div class="d-flex align-items-center justify-content-end my-3">
 				<!--  <h6><input type="checkbox"> 전체선택</h6>  체크박스 -->
-				<select class="form-control col-4 mr-2">
-					<option selected>10개씩 보기</option>
-					<option selected>20개씩 보기</option>
-					<option>50개씩 보기</option>
-					<option>100개씩 보기</option>
+				<select class="form-control col-4 mr-2" id="maxResultSel">
+					<option selected value="10">10개씩 보기</option>
+					<option value="20">20개씩 보기</option>
+					<option value="50">50개씩 보기</option>
+					<option value="100">100개씩 보기</option>
 				</select>
 				<button type="button" class="btn btn-light btn-outline-secondary mx-2" id="allSelectBtn">전체선택</button>
 				<button type="button" class="btn btn-light btn-outline-secondary mx-2 cartBtn">장바구니</button>
@@ -58,9 +58,7 @@
 					</div>
 				</div>
 				<div class="mx-3 info-price">
-					<!-- 
-					<h6 class="text-success" th:text="|${book.salesPoint} %|">(10%)</h6> 
-					 -->
+					<h6 class="text-success" th:text="|(${book.discount} %)|">(10%)</h6> 
 					<del><span th:text="|${#numbers.formatInteger(book.priceStandard, 3, 'COMMA')} 원|">정가 </span></del>
 					<span class="font-weight-bold text-primary ml-1" th:text="|${#numbers.formatInteger(book.priceSales, 3, 'COMMA')} 원|">할인가</span>
 					<div class="font-weight-bold text-info ml-1 text-small" th:text="|(${#numbers.formatInteger(book.mileage, 3, 'COMMA')} point)|">포인트</div>
@@ -96,12 +94,25 @@
 
 	$(document).ready(function(){
 	
+		
+		$("#maxResultSel").on("change",function(){
+            // alert();
+           let maxResults = $(this).val();
+         
+           alert(maxResults);
+           
+           
+         
+});
+
+		
+		
 		$(".cartBtn").on("click",function(){
 		let itemId = $(this).data("item-id");
 		// let userId = null; client를 구분하기 위한 값은 서버에서 처리한다고 생각해주기.
         let quantity = 1;
 
-//		alert(itemId);
+//	alert(itemId);
 // 로그인 안해도 장바구니에 저장될 수 있도록         
         
 		$.ajax({
