[배지현] - search 창에 검색결과 적용되도록 model 적용 - maxResults 적용 ( 1차)

--- a/src/main/resources/templates/books/searchList.html
+++ b/src/main/resources/templates/books/searchList.html
@@ -98,12 +98,20 @@
 		$("#maxResultSel").on("change",function(){
             // alert();
            let maxResults = $(this).val();
+           if (!maxResults) {
+               maxResults = 10;
+           }
+ //          alert(maxResults);
          
-           alert(maxResults);
+           // jquery test06
+           // name이 member인 input 태그 중에서 선택된 input태그 의 value 속성 가져오기 
+                               // $("input[name=type]:checked")
+           let query = $("input[name='query']").val();
+
+           let baseUrl = "/nunubooks/searchList";
            
-           
-         
-});
+           location.href=`${baseUrl}?query=${query}&maxResults=${maxResults}`;
+		});
 
 		
 		
