--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -23,7 +23,7 @@
 							<button type="button" class="btn border-0  m-2">
 								<i class="search-icons bi bi-list"></i>
 							</button>
-							<input type="search" class="search-tab form-control border-0" placeholder="이시간 가장 인기있는 도서는?" name="query">
+							<input type="search" class="search-tab form-control border-0" placeholder="이시간 가장 인기있는 도서는?" name="query" th:value="${query}">
 							<button type="submit" class="btn border-0 m-2" id="searchBtn">
 								<i class="search-icons bi bi-search"></i>
 							</button>
