[배지현] - maxResult  파라미터 전달 방식 수정 #5

--- a/src/main/resources/templates/books/searchList.html
+++ b/src/main/resources/templates/books/searchList.html
@@ -110,7 +110,7 @@
 
            let baseUrl = "/nunubooks/searchList";
            
-           location.href=`${baseUrl}?query=${query}&maxResults=${maxResults}`;
+           location.href = baseUrl + "?query=" + query + "&maxResults=" + maxResults;
 		});
 
 		
