--- a/src/main/resources/templates/books/searchList.html
+++ b/src/main/resources/templates/books/searchList.html
@@ -57,20 +57,27 @@
 						<h6 class= "ml-3" th:text="${book.pubDate}">출판일</h6>
 					</div>
 				</div>
-				<div class="mx-3 info-price">
-					<h6 class="text-success" th:text="|(${book.discount} %)|">(10%)</h6> 
+				<div class="mx-3 info-price" th:if="${book.stockStatus =='품절'}">품절</div>
+				<div class="mx-3 info-price" th:if="${book.stockStatus =='절판'}">절판</div>
+				<div class="mx-3 info-price" th:if="${book.stockStatus ==''  or book.stockStatus =='예약판매'}">
 					<del><span th:text="|${#numbers.formatInteger(book.priceStandard, 3, 'COMMA')} 원|">정가 </span></del>
+					<span class="text-success font-weight-bold h6" th:text="|(${book.discount}%)|">(10%)</span> 
 					<span class="font-weight-bold text-primary ml-1" th:text="|${#numbers.formatInteger(book.priceSales, 3, 'COMMA')} 원|">할인가</span>
 					<div class="font-weight-bold text-info ml-1 text-small" th:text="|(${#numbers.formatInteger(book.mileage, 3, 'COMMA')} point)|">포인트</div>
 				</div>
 				
 				
-				<div class="info-cart">
+				<div class="info-cart" th:if="${book.stockStatus ==''}">
 					<div class="text-center my-3">
 						<button type="button" class="btn btn-outline-secondary cartBtn" th:data-item-id="${book.itemId}">장바구니</button>
 					</div>
 					<div class="text-center my-3">
 						<button type="button" class="btn btn-outline-secondary">바로구매</button>
+					</div>
+				</div>
+				<div class="info-cart" th:if="${book.stockStatus =='예약판매'}">
+					<div class="text-center my-3">
+						<button type="button" class="btn btn-outline-secondary cartBtn" id="preOrderBtn" th:data-item-id="${book.itemId}">예약하기</button>
 					</div>
 				</div>
 				
