--- a/src/main/resources/templates/books/best-seller.html
+++ b/src/main/resources/templates/books/best-seller.html
@@ -10,35 +10,91 @@
 		
 			<div class="d-flex">
 				<nav class="nav flex-column col-2 border-right text-center mr-4">
-					<h3 class="bg-secondary font-weight-bold">국내도서</h3>
+					<h3 class="bg-secondary font-weight-bold my-4">국내도서</h3>
 					  <a class="nav-link text-dark" href="#">카테고리1</a>
 					  <a class="nav-link text-dark" href="#">카테고리2</a>
 					  <a class="nav-link text-dark" href="#">카테고리3</a>
 					  <a class="nav-link text-dark">카테고리4</a>
 				</nav>
 		
-				<div class="bg-info">
+		
+
+		
+			<div>
+				<div class="order-menu w-100 mt-4 d-flex align-items-center justify-content-between">
+					<div class="d-flex">
+						<i class="bi bi-check-circle-fill mx-3 h5 checkbox"></i>
+						<input type="checkbox" class="d-none">
+						<h5 class=" font-weight-bold">전체</h5>
+					</div>
+					<div class="d-flex mr-3">
+						<button type="button" class="btn btn-light btn-outline-secondary mr-1"><i class="bi bi-heart"></i></button>
+						<button type="button" class="btn btn-light btn-outline-secondary mr-1"><i class="bi bi-trash"></i></button>
+						<button type="button" class="btn btn-light btn-outline-secondary mr-1">장바구니</button>
+						<button type="button" class="btn btn-light btn-outline-secondary mr-1">품절/절판 제외</button>
+					</div>
+				</div>
+				<div class="d-flex mt-2">
 					<div>
-						<button type="button" class="btn btn-secondary mx-2">일간</button>
-						<button type="button" class="btn btn-secondary mx-2">주간</button>
-						<button type="button" class="btn btn-secondary mx-2">월간</button>
+						<button type="button" class="btn btn-secondary mx-1">일간</button>
+						<button type="button" class="btn btn-secondary mx-1">주간</button>
+						<button type="button" class="btn btn-secondary mx-1">월간</button>
 					</div>
-					<div class="d-flex justify-content-end">
-						<select class="form-control col-2">
-							<option selected>20개씩 보기</option>
-							<option>50개씩 보기</option>
-							<option>100개씩 보기</option>
-						</select>
-						<button type="button" class="btn btn-secondary mx-2">인기순</button>
-						<button type="button" class="btn btn-secondary mx-2">신간순</button>
-					</div>
+					<select class="form-control col-2 mx-1">
+						<option selected>10개씩 보기</option>
+						<option>20개씩 보기</option>
+						<option>50개씩 보기</option>
+						<option>100개씩 보기</option>
+					</select>
+				</div>
 				
-					<div class="d-flex mr-4 align-items-center justify-content-end my-3">
-								<h6><input type="checkbox"> 전체선택</h6> <!--  체크박스 -->
-								<button type="button" class="btn btn-light btn-outline-secondary mx-1">장바구니</button>
-								<button type="button" class="btn btn-light btn-outline-secondary mx-1"><i class="bi bi-heart"></i></button>
+				<div class="d-flex align-items-center book-info p-2 border m-3">
+					<div class="mx-3 info-checkbox">
+					<span >1</span>
+						<input type="checkbox" class="item-checkbox">
 					</div>
-				
+					<img src="#" class="info-img">
+					<div class="mx-3 info-title">
+						<a href="#" class="text-dark">
+							<h5 class="font-weight-bold">책 제목 어쩌구저쩌구</h5>
+						</a>
+						<h6>저자</h6>
+						<div class="d-flex align-items-center">
+							<h6>출판사</h6>
+							<h6 class= "ml-3">출판일</h6>
+						</div>
+					</div>
+						<!-- 
+						<div class="mx-3 info-price">품절</div>
+						<div class="mx-3 info-price" th:if="${book.stockStatus =='절판'}">절판</div>
+						<div class="mx-3 info-price" th:if="${book.stockStatus ==''  or book.stockStatus =='예약판매'}">
+						 -->
+					 <div>
+						<del><span >정가 </span></del>
+						<span class="text-success font-weight-bold h6">(10%)</span> 
+						<span class="font-weight-bold text-primary ml-1" >할인가</span>
+						<div class="font-weight-bold text-info ml-1 text-small" >포인트</div>
+					</div>
+					<div class="info-cart" >
+						<div class="text-center my-3">
+							<button type="button" class="btn btn-outline-secondary cartBtn" >장바구니</button>
+						</div>
+						<div class="text-center my-3">
+							<button type="button" class="btn btn-outline-secondary">바로구매</button>
+						</div>
+					</div>
+					</div>
+						<!-- 
+						<div class="info-cart" th:if="${book.stockStatus =='예약판매'}">
+							<div class="text-center my-3">
+								<button type="button" class="btn btn-outline-secondary cartBtn" id="preOrderBtn" th:data-item-id="${book.itemId}">예약하기</button>
+							</div>
+						</div>
+						 -->
+						
+											
+						
+				<!--
 								<div class="d-flex align-items-center book-info p-2 border">
 									<div class="mx-3">
 										<input type="checkbox">
@@ -70,11 +126,9 @@
 									
 									
 								</div>
-				
+		  -->		
 				
 					</div>
-			
-			
 			</div>	
 		</section>
 
