[배지현] - 주간 / 월간/ 연간 설정 관련 로직 작성중

--- a/src/main/resources/templates/books/best-seller.html
+++ b/src/main/resources/templates/books/best-seller.html
@@ -101,6 +101,10 @@ $(document).ready(function(){
 	$("#outofStockBtn").on("click",function(){
 
 		// 버튼을 누르면 0->1로 바뀜 
+		//1일때 버튼을 누르면 0으로 바뀜
+		
+		let outofStock;
+		
 		
 	});
 	
