--- a/src/main/resources/templates/order/cart.html
+++ b/src/main/resources/templates/order/cart.html
@@ -106,7 +106,7 @@
 					<table class="table table-borderless">
 						<tr>
 							<th>상품 금액</th>
-							<td>0000원</td>
+							<td  th:text="|${#numbers.formatInteger(totalAmount, 3, 'COMMA')} 원|">0000원</td>
 						</tr>
 						<tr>
 							<th>배송비</th>
@@ -122,7 +122,7 @@
 						</tr>
 						<tr>
 							<th>적립 예정 포인트</th>
-							<td>000 point</td>
+							<td th:text="|${#numbers.formatInteger(totalPoints, 3, 'COMMA')} 원|">000 point</td>
 						</tr>
 					</table>
 						<button type="button" class="btn btn-primary my-3 w-100">구매하기</button>
